--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!--  app名称   -->
-    <string name="app_name">TVBox_HOME</string>
-	<string name="mn_Version">2023.1201.0001</string>
-	<string name="dia_about">版本：2023.1105.0923\n\n更新日志：\n代码回退\n\n本软件只提供聚合展示功能，所有资源来自网上, 软件不参与任何制作, 上传, 储存, 下载等内容. 软件仅供学习参考, 请于安装后24小时内删除。\n\n打包分发请保留出处\nhttps://github.com/CatVodTVOfficial/TVBoxOSC</string>
+    <string name="app_name">电影电视</string>
+	<string name="mn_Version">2023.1202.0002</string>
+	<string name="dia_about">电影电视</string>
 </resources>
